--- a/tsconfig.json
+++ b/tsconfig.json
@@ -64,10 +64,7 @@
     /* Experimental Options */
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-    "paths": {
-        "@libs/*" : ["src/libs/*"],
-        "@assets/*" : ["src/*"]
-    }
+    "paths": {}
   },
   "include" : [
     "src/**/*"
