--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Mobius Spatial Information Model",
   "main": "index.js",
   "dependencies": {
-    "@design-automation/mobius-sim": "^0.2.1",
     "chroma-js": "^2.0.3",
     "lodash": "^4.17.21",
-    "mathjs": "^5.10.3"
+    "mathjs": "^5.10.3",
+    "three": "^0.133.1"
   },
   "devDependencies": {
     "@types/chroma-js": "^1.4.1",
