--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@types/lodash": "^4.14.175",
     "@types/node": "^16.0.0",
     "@types/webgl2": "0.0.5",
+    "typedoc": "^0.22.5",
     "typescript": "^4.4.3"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "publ": "npm run build && npm publish --access public",
-    "moduleDocs": "npm run typedoc && node ./typedoc-json/docConvert.js",
-    "typedoc": "typedoc --exclude **/*.spec.ts --json typedoc-json/doc.json src/core/modules"
+    "publ": "npm run build && npm run typedoc && npm publish --access public",
+    "typedoc": "typedoc --json typedoc-json/doc.json src"
   },
   "repository": {
     "type": "git",
