--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "publ": "npm run build && npm run typedoc && npm publish --access public",
+    "deploy": "npm run build && npm run typedoc && npm publish --access public",
     "typedoc": "typedoc --json typedoc-json/doc.json src"
   },
   "repository": {
