--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     }
   },
   "dependencies": {
+    "@types/three": "^0.135.0",
     "chroma-js": "^2.0.3",
     "lodash": "^4.17.21",
     "mathjs": "^5.10.3",
-    "three": "^0.133.1"
+    "three": "^0.135.0"
   },
   "devDependencies": {
     "@types/chroma-js": "^1.4.1",
