--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@design-automation/mobius-inline-funcs",
-  "version": "0.2.7",
+  "version": "0.2.7a",
   "description": "Mobius Spatial Information Model",
   "main": "build/cjs/index.js",
   "module": "build/mjs/index.js",
