--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@design-automation/mobius-inline-funcs",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "Mobius Spatial Information Model",
   "main": "build/cjs/index.js",
   "module": "build/mjs/index.js",
@@ -31,7 +31,7 @@
   "scripts": {
     "test": "jest",
     "build": "npm run build-del && npm run build-mjs && npm run build-cjs && fixup.sh",
-    "build-del": "if exist build del /s /q build\\*",
+    "build-del": "if exist build del /s /q build && rmdir /s /q build",
     "build-mjs": "tsc -p tsconfig.json",
     "build-cjs": "tsc -p tsconfig-cjs.json",
     "mobius": "node copy_to_mobius.js",
